syntax = "proto3";
package orders.transactions.immediate;

import "gogoproto/gogo.proto";
import "assetmantle/base/ids/v1/classificationID.v1.proto";
import "assetmantle/base/ids/v1/identityID.v1.proto";
import "assetmantle/base/ids/v1/anyOwnableID.v1.proto";
import "assetmantle/base/lists/v1/propertyList.v1.proto";
import "assetmantle/base/types/v1/height.v1.proto";

message Message {
  string from = 1;
  ids.IdentityID from_i_d = 2;
  ids.ClassificationID classification_i_d = 3;
  ids.IdentityID taker_i_d = 4;
  ids.AnyOwnableID maker_ownable_i_d = 5;
  ids.AnyOwnableID taker_ownable_i_d = 6;
  types.Height expires_on = 7;
  string maker_ownable_split = 8 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string taker_ownable_split = 9 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  lists.PropertyList immutable_meta_properties = 10;
  lists.PropertyList immutable_properties = 11;
  lists.PropertyList mutable_meta_properties = 12;
  lists.PropertyList mutable_properties = 13;
}
